[package]
name = "subspace-fraud-proof"
version = "0.1.0"
authors = ["Liu-Cheng Xu <xuliuchengxlc@gmail.com>"]
edition = "2021"
license = "GPL-3.0-or-later"
homepage = "https://subspace.network"
repository = "https://github.com/subspace/subspace/"
description = "Subspace fraud proof utilities"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
codec = { package = "parity-scale-codec", version = "3.1.5", features = ["derive"] }
hash-db = "0.15.2"
sc-client-api = { version = "4.0.0-dev", git = "https://github.com/subspace/substrate", rev = "73c8b9bf8027f04d2b5213ab56700017d139d1d9" }
sp-api = { version = "4.0.0-dev", git = "https://github.com/subspace/substrate", rev = "73c8b9bf8027f04d2b5213ab56700017d139d1d9" }
sp-blockchain = { version = "4.0.0-dev", git = "https://github.com/subspace/substrate", rev = "73c8b9bf8027f04d2b5213ab56700017d139d1d9" }
sp-core = { version = "6.0.0", git = "https://github.com/subspace/substrate", rev = "73c8b9bf8027f04d2b5213ab56700017d139d1d9" }
sp-executor = { version = "0.1.0", path = "../sp-executor" }
sp-runtime = { version = "6.0.0", git = "https://github.com/subspace/substrate", rev = "73c8b9bf8027f04d2b5213ab56700017d139d1d9" }
sp-state-machine = { version = "0.12.0", git = "https://github.com/subspace/substrate", rev = "73c8b9bf8027f04d2b5213ab56700017d139d1d9" }
sp-trie = { version = "6.0.0", git = "https://github.com/subspace/substrate", rev = "73c8b9bf8027f04d2b5213ab56700017d139d1d9" }
tracing = "0.1.36"

[dev-dependencies]
cirrus-block-builder = { version = "0.1.0", path = "../../cumulus/client/block-builder" }
cirrus-primitives = { version = "0.1.0", path = "../../cumulus/primitives" }
cirrus-test-service = { version = "0.1.0", path = "../../cumulus/test/service" }
futures = "0.3.21"
pallet-balances = { version = "4.0.0-dev", git = "https://github.com/subspace/substrate", rev = "73c8b9bf8027f04d2b5213ab56700017d139d1d9" }
sc-cli = { version = "0.10.0-dev", git = "https://github.com/subspace/substrate", rev = "73c8b9bf8027f04d2b5213ab56700017d139d1d9", default-features = false }
sc-service = { version = "0.10.0-dev", git = "https://github.com/subspace/substrate", rev = "73c8b9bf8027f04d2b5213ab56700017d139d1d9", default-features = false }
sp-keyring = { version = "6.0.0", git = "https://github.com/subspace/substrate", rev = "73c8b9bf8027f04d2b5213ab56700017d139d1d9" }
substrate-test-utils = { version = "4.0.0-dev", git = "https://github.com/subspace/substrate", rev = "73c8b9bf8027f04d2b5213ab56700017d139d1d9" }
tokio = "1.20.1"
