[package]
name = "cirrus-node"
version = "0.1.0"
authors = ["Anonymous"]
description = "A new Cumulus FRAME-based Substrate Node, ready for hacking together a parachain."
license = "Unlicense"
homepage = "https://substrate.io"
repository = "https://github.com/paritytech/cumulus/"
edition = "2021"
build = "build.rs"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
futures = "0.3.21"
hex-literal = "0.3.1"
log = "0.4.17"
serde = { version = "1.0.143", features = ["derive"] }
clap = { version = "3.2.16", features = ["derive"] }

# RPC related Dependencies
jsonrpsee = { version = "0.15.1", features = ["server"] }

# Local Dependencies
cirrus-runtime = { path = "../runtime" }

# Substrate Dependencies
frame-benchmarking = { git = "https://github.com/subspace/substrate", rev = "73c8b9bf8027f04d2b5213ab56700017d139d1d9" }
frame-benchmarking-cli = { git = "https://github.com/subspace/substrate", rev = "73c8b9bf8027f04d2b5213ab56700017d139d1d9", default-features = false, features = ["runtime-benchmarks"] }

pallet-transaction-payment-rpc = { git = "https://github.com/subspace/substrate", rev = "73c8b9bf8027f04d2b5213ab56700017d139d1d9" }

substrate-frame-rpc-system = { git = "https://github.com/subspace/substrate", rev = "73c8b9bf8027f04d2b5213ab56700017d139d1d9" }

## Substrate Client Dependencies
sc-chain-spec = { git = "https://github.com/subspace/substrate", rev = "73c8b9bf8027f04d2b5213ab56700017d139d1d9" }
sc-cli = { git = "https://github.com/subspace/substrate", rev = "73c8b9bf8027f04d2b5213ab56700017d139d1d9", default-features = false }
sc-client-api = { git = "https://github.com/subspace/substrate", rev = "73c8b9bf8027f04d2b5213ab56700017d139d1d9" }
sc-consensus = { git = "https://github.com/subspace/substrate", rev = "73c8b9bf8027f04d2b5213ab56700017d139d1d9" }
sc-executor = { git = "https://github.com/subspace/substrate", rev = "73c8b9bf8027f04d2b5213ab56700017d139d1d9" }
sc-network = { git = "https://github.com/subspace/substrate", rev = "73c8b9bf8027f04d2b5213ab56700017d139d1d9" }
sc-rpc = { git = "https://github.com/subspace/substrate", rev = "73c8b9bf8027f04d2b5213ab56700017d139d1d9" }
sc-rpc-api = { git = "https://github.com/subspace/substrate", rev = "73c8b9bf8027f04d2b5213ab56700017d139d1d9" }
sc-service = { git = "https://github.com/subspace/substrate", rev = "73c8b9bf8027f04d2b5213ab56700017d139d1d9", default-features = false, features = ["wasmtime"] }
sc-telemetry = { git = "https://github.com/subspace/substrate", rev = "73c8b9bf8027f04d2b5213ab56700017d139d1d9" }
sc-transaction-pool = { git = "https://github.com/subspace/substrate", rev = "73c8b9bf8027f04d2b5213ab56700017d139d1d9" }
sc-transaction-pool-api = { git = "https://github.com/subspace/substrate", rev = "73c8b9bf8027f04d2b5213ab56700017d139d1d9" }
sc-utils = { git = "https://github.com/subspace/substrate", rev = "73c8b9bf8027f04d2b5213ab56700017d139d1d9" }

## Substrate Primitive Dependencies
sp-api = { git = "https://github.com/subspace/substrate", rev = "73c8b9bf8027f04d2b5213ab56700017d139d1d9" }
sp-block-builder = { git = "https://github.com/subspace/substrate", rev = "73c8b9bf8027f04d2b5213ab56700017d139d1d9" }
sp-blockchain = { git = "https://github.com/subspace/substrate", rev = "73c8b9bf8027f04d2b5213ab56700017d139d1d9" }
sp-consensus = { git = "https://github.com/subspace/substrate", rev = "73c8b9bf8027f04d2b5213ab56700017d139d1d9" }
sp-consensus-slots = { git = "https://github.com/subspace/substrate", rev = "73c8b9bf8027f04d2b5213ab56700017d139d1d9" }
sp-core = { git = "https://github.com/subspace/substrate", rev = "73c8b9bf8027f04d2b5213ab56700017d139d1d9" }
sp-inherents = { git = "https://github.com/subspace/substrate", rev = "73c8b9bf8027f04d2b5213ab56700017d139d1d9" }
sp-keystore = { git = "https://github.com/subspace/substrate", rev = "73c8b9bf8027f04d2b5213ab56700017d139d1d9" }
sp-offchain = { git = "https://github.com/subspace/substrate", rev = "73c8b9bf8027f04d2b5213ab56700017d139d1d9" }
sp-runtime = { git = "https://github.com/subspace/substrate", rev = "73c8b9bf8027f04d2b5213ab56700017d139d1d9" }
sp-session = { git = "https://github.com/subspace/substrate", rev = "73c8b9bf8027f04d2b5213ab56700017d139d1d9" }
sp-transaction-pool = { git = "https://github.com/subspace/substrate", rev = "73c8b9bf8027f04d2b5213ab56700017d139d1d9" }

# Cumulus dependencies
cumulus-client-consensus-relay-chain = { path = "../client/consensus/relay-chain" }
cirrus-client-executor = { path = "../client/cirrus-executor" }
cirrus-client-executor-gossip = { path = "../client/executor-gossip" }
cirrus-primitives = { path = "../primitives" }

# Subspace dependencies
sp-executor = { path = "../../crates/sp-executor" }
subspace-core-primitives = { path = "../../crates/subspace-core-primitives" }
subspace-runtime-primitives = { path = "../../crates/subspace-runtime-primitives" }

[build-dependencies]
substrate-build-script-utils = { git = "https://github.com/subspace/substrate", rev = "73c8b9bf8027f04d2b5213ab56700017d139d1d9" }

[features]
runtime-benchmarks = [
    "cirrus-runtime/runtime-benchmarks",
]
