[package]
name = "cirrus-client-executor-gossip"
version = "0.1.0"
authors = ["Liu-Cheng Xu <xuliuchengxlc@gmail.com>"]
edition = "2021"

[dependencies]
# Substrate dependencies
sc-network = { git = "https://github.com/subspace/substrate", rev = "73c8b9bf8027f04d2b5213ab56700017d139d1d9" }
sc-network-gossip = { git = "https://github.com/subspace/substrate", rev = "73c8b9bf8027f04d2b5213ab56700017d139d1d9" }
sc-utils = { git = "https://github.com/subspace/substrate", rev = "73c8b9bf8027f04d2b5213ab56700017d139d1d9" }
sp-core = { git = "https://github.com/subspace/substrate", rev = "73c8b9bf8027f04d2b5213ab56700017d139d1d9" }
sp-runtime = { git = "https://github.com/subspace/substrate", rev = "73c8b9bf8027f04d2b5213ab56700017d139d1d9" }

futures = "0.3.21"
parity-scale-codec = { version = "3.1.5", features = ["derive"] }
parking_lot = "0.12.1"
tracing = "0.1.36"

sp-executor = { path = "../../../crates/sp-executor" }
