[package]
name = "cumulus-client-consensus-relay-chain"
description = "The relay-chain provided consensus algorithm"
version = "0.1.0"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2021"

[dependencies]
async-trait = "0.1.57"
sc-consensus = { git = "https://github.com/subspace/substrate", rev = "73c8b9bf8027f04d2b5213ab56700017d139d1d9" }
sp-blockchain = { git = "https://github.com/subspace/substrate", rev = "73c8b9bf8027f04d2b5213ab56700017d139d1d9" }
sp-consensus = { git = "https://github.com/subspace/substrate", rev = "73c8b9bf8027f04d2b5213ab56700017d139d1d9" }
sp-core = { git = "https://github.com/subspace/substrate", rev = "73c8b9bf8027f04d2b5213ab56700017d139d1d9" }
sp-runtime = { git = "https://github.com/subspace/substrate", rev = "73c8b9bf8027f04d2b5213ab56700017d139d1d9" }
substrate-prometheus-endpoint = { git = "https://github.com/subspace/substrate", rev = "73c8b9bf8027f04d2b5213ab56700017d139d1d9" }
